# inform-elbenolly

./: CMakeLists.txt  Dockerfile  modernization-plan.md
inblorb/: CMakeLists.txt
inbuild/: CMakeLists.txt
inbuild/supervisor-module/: CMakeLists.txt
indoc/: CMakeLists.txt
inform6/: CMakeLists.txt
inform7/: CMakeLists.txt
inform7/Internal/Extensions/Graham Nelson/Standard Rules.i7xd/Source/: Contents.w
inpolicy/: CMakeLists.txt
inter/: CMakeLists.txt
inter/building-module/: CMakeLists.txt
inter/bytecode-module/: CMakeLists.txt
inter/final-module/: CMakeLists.txt
inter/index-module/: CMakeLists.txt
inter/pipeline-module/: CMakeLists.txt
services/arch-module/: CMakeLists.txt
services/calculus-module/: CMakeLists.txt
services/html-module/: CMakeLists.txt
services/inflections-module/: CMakeLists.txt
services/kinds-module/: CMakeLists.txt
services/lexicon-module/: CMakeLists.txt
services/linguistics-module/: CMakeLists.txt
services/problems-module/: CMakeLists.txt
services/syntax-module/: CMakeLists.txt
services/words-module/: CMakeLists.txt
