cmake_minimum_required(VERSION 3.10)
project(Inform7 C)

add_subdirectory(inform7)
add_subdirectory(inbuild)
add_subdirectory(inter)
add_subdirectory(inblorb)
add_subdirectory(indoc)
add_subdirectory(inpolicy)
add_subdirectory(inform6)

add_subdirectory(services/words-module)
add_subdirectory(services/syntax-module)
add_subdirectory(services/html-module)
add_subdirectory(services/arch-module)
add_subdirectory(services/inflections-module)
add_subdirectory(services/lexicon-module)
add_subdirectory(services/linguistics-module)
add_subdirectory(services/problems-module)
add_subdirectory(services/kinds-module)
add_subdirectory(services/calculus-module)

add_subdirectory(inter/bytecode-module)
add_subdirectory(inter/building-module)
add_subdirectory(inter/pipeline-module)
add_subdirectory(inter/final-module)
add_subdirectory(inter/index-module)

add_subdirectory(inbuild/supervisor-module)
